# GPTImage

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: version.rc.in
cmake/: version.hpp.in
config/: gptimage.toml.example
deploy/: Caddyfile.gptimage.snippet  gptimage-mcp.service
deploy/fail2ban/filter.d/: caddy-gptimage-401.conf  caddy-gptimage-register.conf
deploy/fail2ban/jail.d/: caddy-gptimage-register.conf  caddy-gptimage.conf
include/gptimage/: .gitkeep  auth.hpp  config.hpp  config_write.hpp  db.hpp  image_client.hpp  jwt_sign.hpp  jwt_verify.hpp  password_hash.hpp  realm.hpp
scripts/: backup_vps.sh  deploy_vps.sh  install_linux.sh  oauth_smoke.sh
sql/migrations/: .gitkeep  0001_api_tokens.sql  0002_oauth_server.sql  0003_audit_log.sql
sql/setup/: .gitkeep  create_role.sql  uninstall.sql
src/cli/: CMakeLists.txt  cmd_migrate.cpp  cmd_oauth.cpp  cmd_passwd.cpp  cmd_tokens.cpp  main.cpp
src/common/: CMakeLists.txt  auth.cpp  config.cpp  config_write.cpp  db.cpp  image_client.cpp  jwt_sign.cpp  jwt_verify.cpp  password_hash.cpp  realm.cpp
src/mcp/: CMakeLists.txt  auth.cpp  auth.hpp  http_transport.cpp  job_store.cpp  job_store.hpp  main.cpp  oauth.cpp  oauth.hpp  oauth_http.cpp  server.cpp  server.hpp  tool_common.cpp  tool_common.hpp  tool_edit.cpp  tool_generate.cpp  tool_result.cpp  tools.cpp  tools.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_auth.cpp  test_config.cpp  test_config_write.cpp  test_job_store.cpp  test_jwt_sign.cpp  test_oauth.cpp  test_password_hash.cpp  test_realm_grants.cpp
